--- a/notes_frontend/package.json
+++ b/notes_frontend/package.json
@@ -16,10 +16,12 @@
     "@remix-run/serve": "^2.16.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "cross-fetch": "^4.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.0",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
